# peelr

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Info.plist  LICENSE  README.md  project.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
Sources/App/: AppDelegate.swift  AppState.swift  PeelrApp.swift  RemovalSettingsStore.swift
Sources/Clipboard/: PasteboardService.swift
Sources/Engine/: BackgroundRemover.swift  BiRefNetMatter.swift  ColorKeyMatter.swift  ImageCompositing.swift  Matter.swift  ModeDetector.swift  ModelStore.swift  VisionSubjectMatter.swift
Sources/Hotkey/: HotKeyConfig.swift  HotKeyManager.swift
Sources/Intents/: PeelrShortcuts.swift  RemoveBackgroundIntent.swift
Sources/Notifications/: NotificationChannel.swift  NotificationManager.swift  NotificationSettings.swift  NotificationSound.swift
Sources/Services/: ServiceProvider.swift
Sources/UI/: CheckerboardPreview.swift  ComparisonView.swift  MainWindow.swift  OnboardingView.swift  SettingsView.swift  TransformGestureView.swift
Tests/PeelrTests/: EngineRegressionTests.swift
docs/: ci-setup.md  development.md  releasing.md
scripts/: convert_birefnet.py
